--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@types/jsonwebtoken": "^9.0.10",
     "bcrypt": "^6.0.0",
     "bcryptjs": "^3.0.3",
+    "cloudinary": "^2.9.0",
     "clsx": "^2.1.1",
     "framer-motion": "^12.23.25",
     "jsonwebtoken": "^9.0.3",
