--- a/package.json
+++ b/package.json
@@ -14,11 +14,13 @@
     "bcryptjs": "^3.0.3",
     "cloudinary": "^2.9.0",
     "clsx": "^2.1.1",
+    "fabric": "^6.9.1",
     "framer-motion": "^12.23.25",
     "jsonwebtoken": "^9.0.3",
     "lucide-react": "^0.556.0",
     "mongoose": "^9.0.1",
     "next": "16.0.7",
+    "nodemailer": "^8.0.1",
     "react": "19.2.0",
     "react-dom": "19.2.0",
     "tailwind-merge": "^3.4.0"
@@ -26,6 +28,7 @@
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
     "@types/node": "^20",
+    "@types/nodemailer": "^7.0.11",
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "eslint": "^9",
